# cgue23-pac3D

./: .gitignore  .gitmodules  COMPONENTS_DOCS.md  DOCUMENTATION.md  README.md
CgEngine_Solution/: CMakeLists.txt  CMakePresets.json
CgEngine_Solution/assets/: settings.ini  table.fbx
CgEngine_Solution/assets/engine/shaders/: bloomDownSample_fragment.glsl  bloomUpSample_fragment.glsl  bloomUpSample_vertex.glsl  dirShadowMap_fragment.glsl  dirShadowMap_geometry.glsl  dirShadowMap_vertex.glsl  irradianceMap_comp.glsl  lines_fragment.glsl  lines_vertex.glsl  normalsVisualize_fragment.glsl  normalsVisualize_geometry.glsl  normalsVisualize_vertex.glsl  pbr_fragment.glsl  pbr_vertex.glsl  physicsColliders_vertex.glsl  preDepth_vertex.glsl  prefilterMap_comp.glsl  screen_fragment.glsl  screen_vertex.glsl  skinning_comp.glsl  skybox_fragment.glsl  skybox_vertex.glsl  sphereToCube_comp.glsl  uiCircle_fragment.glsl  uiCircle_vertex.glsl  uiRect_fragment.glsl  uiRect_vertex.glsl  uiText_fragment.glsl  uiText_vertex.glsl
CgEngine_Solution/assets/engine/shaders/common/: Bloom.glsl  CameraDataBuffer.glsl
CgEngine_Solution/assets/game/: asstes.xml  city_map.fbx  garage.fbx  ghosts.fbx  gohst_b.fbx  house.gltf  materials.xml  metal_ghost.fbx  models.fbx  pacman.fbx  physics-materials.xml  wood_table.fbx
CgEngine_Solution/assets/game/scenes/: default_scene.xml  game_scene.xml  lost_scene.xml  start_scene.xml  win_scene.xml
CgEngine_Solution/assets/shaders/: pbr_fragment.glsl  pbr_vertex.glsl  screen_fragment.glsl
CgEngine_Solution/cmake/: SourcesList.cmake
CgEngine_Solution/src/: Main.cpp  pch.h
CgEngine_Solution/src/CgEngine/: Application.cpp  Application.h  Asserts.h  FileSystem.cpp  FileSystem.h  GlobalObjectManager.cpp  GlobalObjectManager.h  Logging.cpp  Logging.h  Macros.h  TimeStep.cpp  TimeStep.h  Uuid.cpp  Uuid.h  Window.cpp  Window.h
CgEngine_Solution/src/CgEngine/Animation/: Animation.cpp  Animation.h  BoneInfluence.cpp  BoneInfluence.h  BoneInfo.cpp  BoneInfo.h  Skeleton.cpp  Skeleton.h
CgEngine_Solution/src/CgEngine/Components/: AnimatedMeshRendererComponent.cpp  AnimatedMeshRendererComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  CameraComponent.cpp  CameraComponent.h  CapsuleColliderComponent.cpp  CapsuleColliderComponent.h  CharacterControllerComponent.cpp  CharacterControllerComponent.h  Component.h  ConvexColliderComponent.cpp  ConvexColliderComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  PointLightComponent.cpp  PointLightComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  SkyboxComponent.cpp  SkyboxComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h  SpotLightComponent.cpp  SpotLightComponent.h  TransformComponent.cpp  TransformComponent.h  TriangleColliderComponent.cpp  TriangleColliderComponent.h  UiCanvasComponent.cpp  UiCanvasComponent.h
CgEngine_Solution/src/CgEngine/Events/: Event.h  Input.cpp  Input.h  KeyCodes.h  KeyPressedEvent.h  KeyReleasedEvent.h  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
CgEngine_Solution/src/CgEngine/Physics/: AbstractPhysicsActor.cpp  AbstractPhysicsActor.h  PhysicsActor.cpp  PhysicsActor.h  PhysicsController.cpp  PhysicsController.h  PhysicsControllerHitReportCallback.cpp  PhysicsControllerHitReportCallback.h  PhysicsConvexMesh.cpp  PhysicsConvexMesh.h  PhysicsCooking.cpp  PhysicsCooking.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsShape.cpp  PhysicsShape.h  PhysicsShapeBox.cpp  PhysicsShapeBox.h  PhysicsShapeCapsule.cpp  PhysicsShapeCapsule.h  PhysicsShapeConvexMesh.cpp  PhysicsShapeConvexMesh.h  PhysicsShapeSphere.cpp  PhysicsShapeSphere.h  PhysicsShapeTriangleMesh.cpp  PhysicsShapeTriangleMesh.h  PhysicsSimulationEventCallbacks.cpp  PhysicsSimulationEventCallbacks.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsTriangleMesh.cpp  PhysicsTriangleMesh.h
CgEngine_Solution/src/CgEngine/Rendering/: AABoundingBox.cpp  AABoundingBox.h  Camera.cpp  Camera.h  CameraFrustum.cpp  CameraFrustum.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderDataType.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.cpp  VertexBuffer.h
CgEngine_Solution/src/CgEngine/Resources/: Font.cpp  Font.h  MeshVertices.cpp  MeshVertices.h  ResourceManager.h  XMLFile.cpp  XMLFile.h
CgEngine_Solution/src/CgEngine/Scene/: ComponentArray.h  ComponentManager.h  Entity.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h
CgEngine_Solution/src/CgEngine/Scripting/: NativeScript.cpp  NativeScript.h  ScriptManager.cpp  ScriptManager.h
CgEngine_Solution/src/CgEngine/Ui/: UiCircle.cpp  UiCircle.h  UiElement.cpp  UiElement.h  UiRect.cpp  UiRect.h  UiText.cpp  UiText.h
CgEngine_Solution/src/Game/: CameraScript.cpp  CameraScript.h  CubeTestScript.cpp  CubeTestScript.h  EndScript.cpp  EndScript.h  FPSCounter.cpp  FPSCounter.h  FlyingCameraScript.cpp  FlyingCameraScript.h  GhostsController.cpp  GhostsController.h  LostScript.cpp  LostScript.h  PlayerScript.cpp  PlayerScript.h  ProjectileScript.cpp  ProjectileScript.h  SingleGhostScript.cpp  SingleGhostScript.h  StartScript.cpp  StartScript.h
docs/md/: COMPONENTS_DOCS.md  DOCUMENTATION.md
docs/tex/: component_docs.tex  main.tex
